# MultimodalUniverse

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  bench-requirements.txt  conftest.py  dev.ipynb  download_data.py  dset-requirements.txt  eval-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  tiny_dset_test.yml
astropile/: __init__.py  build_master_cat.py  desi.py  dset_utils.py  generator.py  hsc.py  sdss_dataset.py  utils.py
astropile/baselines/: dataset_utils.py
astropile/benchmark/: __init__.py  dataset.py  trainer.py
astropile/datasets/: __init__.py  decals.py  desi.py  hsc.py  template.py
astropile/readers/: desi.py  hsc.py  reader.py
astropile/sdss_spectra/: explanation.ipynb  merge_hdf5.py  process_spectra.py  sdss_dataset.py  submit_process.sh
astropile/tests/: __init__.py
baselines/: dataset_utils.py  dataset_wrapper.py  plotting.py  utils.py
baselines/galaxy10_decals/: dataset_wrapper.py  galaxy10_decals.ipynb  galaxy10_model.py  model.py
baselines/galaxy_properties/: dataset.py  model.py  utils.py
baselines/generative_diffusion/: generative_tutorial.ipynb  generative_wrapper.py
baselines/photo_class/: README  __init__.py  config.yaml  dataset.py  model.py  snmachine_example.py  trainer.py  utils.py
baselines/photo_z/: Untitled.ipynb  __init__.py  config.yaml  data_wrapper.py  dataset.py  galaxy10_decals.ipynb  load_datasets.py  load_datasets_small.py  model.py  photo_z_data_wrapper.py  photo_z_model.py  photo_z_wrapper.py  plotting.py  trainer.py  tutorial.ipynb  utils.py
baselines/plasticc/: models.py  plasticc.py  plasticc_config.yml  preprocess.py
benchmarks/: data_throughput.py
experimental_benchmark/: cross_match.py
mmu/: utils.py
notebooks/: astropile_demo.ipynb  getting_started.ipynb  plasticc_demo.ipynb
scripts/: Makefile  bibtex_citations.py  build_parent_sample.py  cfa.py  check.txt  cite.py  compile_astropile.sh  csp.py  download_data.py  get_croissant.py  index.html  info.py  prepare_data.py  sanity_check.py  upload_to_hub.py
tests/: get_unique_base_dir.sh
(+461 files in other folders)
