[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "astropile"
authors = [
    {name = "AstroPile Developers"},
]
description = "Large Astronomical Dataset for Foundation Models"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "h5py",
    "datasets",
    "astropy",
]

[tool.setuptools]
packages = ["astropile"]

[tool.setuptools_scm]
write_to = "astropile/_version.py"

[project.scripts]
astropile_cli = "astropile.benchmark.trainer:trainer_cli"
