[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mmu"
authors = [
    {name = "Multimodal Universe Collaboration"},
]
description = "Large Astronomical Dataset for Foundation Models"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
optional-dependencies = {bench = { file = ["bench-requirements.txt"] }}

[tool.setuptools]
packages = ["mmu"]

[tool.setuptools_scm]
write_to = "mmu/_version.py"

[project.scripts]
mmu_cli = "mmu.benchmark.trainer:trainer_cli"
